kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lineten-sre-assessment
spec:
  selector:
    app: lineten-sre-assessment
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
